Рефакторинг тестов и фиксы (#637)
* фикстуры

* переработка тестовых утиллит

* Первая часть переработанных тестов

* Вторая часть переработанных тестов

* 1. скорректированы значения интерфейсов по умолчанию
2. хранение пути для макета изменено с Path на URI
3. скорректировано заполнение режима совместимости расширений
4. скорректирован формат длины для стандартных реквизитов кода и номера
5. реализовано чтение стилей и интерфейсов обычного приложения для формата едт
6. скорректированы конверторы для сериализации в json для тестов

* 1. скорректирован алгоритм определения mdotype для некоторых дочерних
2. добавлены тесты и фикстуры для дочерних

* 1. исправлено чтение элементов форм для обоих форматов
2. добавлены тесты для форм

* тесты на макеты

* исключение сериализации uri

* sq fixes